--- a/Game/index.html
+++ b/Game/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nort</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <script src="./js/Game.js"></script>
     <script src="./js/main.js"></script>
 </head>
 <body>
